<resources>
    <string name="app_name">ShoppingList</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logIn">Sign In</string>
    <string name="name">Name</string>
    <string name="registrer">Register</string>
    <string name="enter_your_details">Create your account :</string>
    <string name="sign_up_here">Sign up here!</string>
    <string name="don_t_have_an_account">Do not have an account?</string>
    <string name="sign_in_here">Sign in here!</string>
    <string name="don_you_have_an_account">Do you have an account?</string>
    <string name="contentDes">Content Des</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="list_with_date_time">List with date time</string>
    <string name="product">Product</string>
    <string name="number">Number</string>
    <string name="add_product">add product</string>
    <string name="product_list">Product List</string>
    <string name="list">list</string>
</resources>